# Fitness

./: .gitignore  TELEGRAM_BOT_TROUBLESHOOTING.md  TODO  deploy.sh  messages.mo  pyproject.toml  req.txt  setup_webhook.py
.github/workflows/: deploy.yml
.run/: Fitness_app.run.xml
apps/: apps.py  context_processors.py  forms.py  middleware.py  mixins.py  signals.py  telegram_urls.py  urls.py
apps/admin/: __init__.py  exercises.py  handbook.py  payments.py  users.py  workouts.py
apps/bot/: apps.py  bot_view.py  service.py  utils.py
apps/fixtures/: edition.json  exercises.json
apps/migrations/: 0001_initial.py  0002_plan_is_premium.py  0003_plan_progression_config.py  0004_plan_description_plan_description_ru_and_more.py  0005_workout_apply_to_all_weeks_workout_description_ru_and_more.py  0006_alter_workout_apply_to_all_weeks.py  0007_workoutexercise_minutes.py  0008_remove_progressionsetting_multiplier_and_more.py  0009_alter_program_level_and_more.py  0009_usercustomprogram.py  0010_alter_program_level_and_more.py  0010_merge_20260424_1830.py  0011_merge_20260427_0140.py  0012_plan_is_4_week_homeprogressionsetting.py  0013_gymweek_homeweek.py  0014_alter_handbookitem_options_and_more.py  0015_alter_payment_options_alter_subscription_options_and_more.py  0016_individual_program.py  0017_program_share_token.py  0018_onetimeprogram_program_is_one_time_and_more.py  0019_plan_home_progression_config.py  (+10 more)
root/: environment.py  settings.py  urls.py
templates/: animation.html  base.html  error_page.html  partial_base.html  premium.html  premium2.html
(+163 files in other folders)
