[project]
name = "fitness-app"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.*"
dependencies = [
    "decouple>=0.0.7",
    "django==5.0.4",
    "django-cors-headers==4.3.1",
    "django-filter==24.2",
    "django-jazzmin==3.0.0",
    "django-rest-framework>=0.1.0",
    "djangorestframework==3.15.1",
    "django-nested-admin==4.0.2",
    "django-parler==2.3",
    "drf-spectacular==0.27.1",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.5",
    "pytelegrambotapi==4.18.0",
    "python-dateutil>=2.8.2",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "python-telegram-bot>=22.7",
    "requests==2.31.0",
    "asgiref==3.8.1",
    "attrs==23.2.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "inflection==0.5.1",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "pyyaml==6.0.1",
    "referencing==0.35.1",
    "rpds-py==0.18.0",
    "sqlparse==0.5.0",
    "uritemplate==4.1.1",
    "urllib3==2.2.1",
]

[tool.isort]
profile = "hug"
skip = "build,.tox,.venv"
src_paths="isort,test"
